# Copyright (C) 2022 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m4"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toolchain.
board_toolchain = "arm-none-eabi-gcc"

use_board_toolchain = true

# The toolchain path installed, it's not mandatory if you have added toolchain path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

board_opt_flags = [
  "-mcpu=cortex-m4",
  "-mthumb",
  "-mfpu=fpv4-sp-d16",
  "-mfloat-abi=hard",
]

# Board related common compile flags.
board_cflags = [
  "-Og",
  "-Wall",
  "-fdata-sections",
  "-ffunction-sections",
  "-DUSE_HAL_DRIVER",
  "-DSTM32L496xx",
  "-DUSE_FULL_LL_DRIVER",
  "-D__LITEOS_M__",
]
board_cflags += board_opt_flags

board_asmflags = [
  "-Og",
  "-Wall",
  "-fdata-sections",
  "-ffunction-sections",
]
board_asmflags += board_opt_flags

board_cxx_flags = board_cflags

board_ld_flags = [
  "--specs=nano.specs",
  "-Wl,--gc-sections",
  "-Wl,--wrap=_calloc_r",
  "-Wl,--wrap=_malloc_r",
  "-Wl,--wrap=_realloc_r",
  "-Wl,--wrap=_reallocf_r",
  "-Wl,--wrap=_free_r",
  "-Wl,--wrap=_memalign_r",
  "-Wl,--wrap=_malloc_usable_size_r",
]
board_ld_flags += board_opt_flags

# Board related headfiles search path.
board_include_dirs = [ "//commonlibrary/utils_lite/include" ]

# Board adapter dir for OHOS components.
board_adapter_dir = "//device/soc/stm/stm32l4xx/sdk"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = "spinor"
