# Copyright (c) 2021-2022 Hihope Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")

module_name = "stm32l4xx_sdk"

kernel_module(module_name) {
  asmflags = board_asmflags

  sources = [
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc_ex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cortex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_iwdg.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr_ex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_qspi.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc_ex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc_ex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart_ex.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart_ex.c",

    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_adc.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_exti.c",
    "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c",
  ]
}
