# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

ohos_static_library("libdiff_patch") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/patch",
    "//third_party/openssl/include",
  ]

  deps = [ "//base/update/updater/services/diffpatch/patch:libpatch" ]
}

ohos_shared_library("libdiff_patch_shared") {
  sources = [ "diff_patch_interface.cpp" ]

  include_dirs = [
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/patch",
    "//third_party/openssl/include",
  ]

  deps = [
    "//base/update/updater/interfaces/kits/misc_info:libmiscinfo",
    "//base/update/updater/services/applypatch:libapplypatch",
    "//base/update/updater/services/diffpatch/patch:libpatch",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/services/package:libupdaterpackage",
    "//base/update/updater/services/ptable_parse:libptableparse",
    "//base/update/updater/utils:libutils",
  ]

  subsystem_name = "updater"
  part_name = "updater"
}
