# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/init/begetd.gni")
import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

ohos_static_library("libslotinfo") {
  sources = [ "slot_info.cpp" ]

  include_dirs = [
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/include",
    "//base/update/updater/utils/include",
    "//drivers/peripheral/partitionslot/hal/include",
  ]

  deps = [ "//base/update/updater/services/log:libupdaterlog" ]
  if (enable_ohos_startup_init_feature_ab_partition) {
    defines = [ "UPDATER_AB_SUPPORT" ]
    deps +=
        [ "//drivers/peripheral/partitionslot/hal:libpartition_slot_manager" ]
  }

  subsystem_name = "updater"
  part_name = "updater"
}
