# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

UPDATER_TEST_ROOT = "//base/update/updater/test/unittest"

MODULE_OUTPUT_PATH = "updater/updater_test"

ohos_unittest("applypatch_unittest") {
  testonly = true
  resource_config_file =
      "//base/update/updater/test/unittest/test_data/ohos_test.xml"
  module_out_path = MODULE_OUTPUT_PATH
  sources = [
    "all_cmd_unittest.cpp",
    "applypatch_unittest.cpp",
    "blockset_unittest.cpp",
    "commands_unittest.cpp",
    "commandsfunction_unittest.cpp",
    "partition_update_record_unittest.cpp",
    "store_unittest.cpp",
    "transfer_manager_unittest.cpp",
  ]
  sources += [
    "//base/update/updater/services/applypatch/block_set.cpp",
    "//base/update/updater/services/applypatch/block_writer.cpp",
    "//base/update/updater/services/applypatch/command.cpp",
    "//base/update/updater/services/applypatch/command_function.cpp",
    "//base/update/updater/services/applypatch/command_process.cpp",
    "//base/update/updater/services/applypatch/data_writer.cpp",
    "//base/update/updater/services/applypatch/partition_record.cpp",
    "//base/update/updater/services/applypatch/raw_writer.cpp",
    "//base/update/updater/services/applypatch/store.cpp",
    "//base/update/updater/services/applypatch/transfer_manager.cpp",
  ]
  include_dirs = [
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/fs_manager",
    "//base/update/updater/services/include/log",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/script",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/test/unittest",
    "//base/update/updater/utils/include",
    "//third_party/bounds_checking_function/include",
  ]
  deps = [
    "//base/update/updater/services/applypatch:libapplypatch",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/openssl:libcrypto_static",
    "//third_party/openssl:ssl_source",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    ]
  configs = [ "$UPDATER_TEST_ROOT:utest_config" ]
  install_enable = true
  part_name = "updater"
}
