# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

UPDATER_TEST_ROOT = "//base/update/updater/test/unittest"

MODULE_OUTPUT_PATH = "updater/updater_test"

ohos_unittest("script_unittest") {
  testonly = true
  resource_config_file =
      "//base/update/updater/test/unittest/test_data/ohos_test.xml"
  module_out_path = MODULE_OUTPUT_PATH
  sources = [
    "script_instruction/basic_instruction_unittest.cpp",
    "script_instruction/script_instructionhelper_unittest.cpp",
    "script_instruction/script_loadscript_unittest.cpp",
    "script_instruction/script_registercmd_unittest.cpp",
    "script_instruction/script_updateprocesser_unittest.cpp",
    "script_interpreter_unittest.cpp",
    "script_unittest.cpp",
    "threadpool_unittest.cpp",
  ]
  sources += [
    "$root_out_dir/updater/updater/yacc/lexer.cpp",
    "$root_out_dir/updater/updater/yacc/parser.cpp",
    "//base/update/updater/services/script/script_instruction/script_basicinstruction.cpp",
    "//base/update/updater/services/script/script_instruction/script_instructionhelper.cpp",
    "//base/update/updater/services/script/script_instruction/script_loadscript.cpp",
    "//base/update/updater/services/script/script_instruction/script_registercmd.cpp",
    "//base/update/updater/services/script/script_instruction/script_updateprocesser.cpp",
    "//base/update/updater/services/script/script_interpreter/script_context.cpp",
    "//base/update/updater/services/script/script_interpreter/script_expression.cpp",
    "//base/update/updater/services/script/script_interpreter/script_function.cpp",
    "//base/update/updater/services/script/script_interpreter/script_interpreter.cpp",
    "//base/update/updater/services/script/script_interpreter/script_param.cpp",
    "//base/update/updater/services/script/script_interpreter/script_scanner.cpp",
    "//base/update/updater/services/script/script_interpreter/script_statement.cpp",
    "//base/update/updater/services/script/script_manager/script_managerImpl.cpp",
    "//base/update/updater/services/script/script_manager/script_utils.cpp",
    "//base/update/updater/services/script/threadpool/threadpool.cpp",
  ]
  include_dirs = [
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/script",
    "//base/update/updater/services/include/log",
    "//base/update/updater/services/include/updater",
    "//base/update/updater/services/package/pkg_algorithm",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/services/script/script_instruction",
    "//base/update/updater/services/script/script_interpreter",
    "//base/update/updater/services/script/script_manager",
    "//base/update/updater/services/script/threadpool",
    "$root_out_dir/updater/updater/yacc",
    "//base/update/updater/test/unittest",
    "//base/update/updater/utils/include",
    "//third_party/bounds_checking_function/include",
    "//third_party/openssl/include",
  ]

  deps = [
    "//base/update/updater/interfaces/kits/packages:libpackageExt",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/services/package:libupdaterpackage",
    "//base/update/updater/services/script:gen_yacc",
    "//base/update/updater/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/openssl:ssl_source",
    "//third_party/zlib:libz",
  ]
  configs = [ "$UPDATER_TEST_ROOT:utest_config" ]
  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
  install_enable = true
  part_name = "updater"
}

ohos_shared_library("user_instruction") {
  sources = [ "script_instruction/user_instruction/user_instruction.cpp" ]
  output_extension = "so"
  ldflags = [ "-rdynamic" ]
  include_dirs = [
    "//base/update/updater/interfaces/kits/include/",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/script",
    "//base/update/updater/services/script/script_instruction",
  ]
  install_enable = true
  part_name = "updater"
}

ohos_shared_library("user_instruction_invalid") {
  sources =
      [ "script_instruction/user_instruction/user_instruction_invalid.cpp" ]
  output_extension = "so"
  ldflags = [ "-rdynamic" ]
  include_dirs = [
    "//base/update/updater/interfaces/kits/include/",
    "//base/update/updater/services/include",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/include/script",
    "//base/update/updater/services/script/script_instruction",
  ]
  install_enable = true
  part_name = "updater"
}
