# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

UPDATER_TEST_ROOT = "//base/update/updater/test/unittest"

MODULE_OUTPUT_PATH = "updater/updater_test"

SUBSYSTEM_DIR = "//base/update/updater"

ohos_unittest("updater_service_unittest") {
  defines = [ "UPDATER_UT" ]
  testonly = true
  resource_config_file =
      "//base/update/updater/test/unittest/test_data/ohos_test.xml"
  module_out_path = MODULE_OUTPUT_PATH
  sources = [
    "//base/update/updater/services/updater_preprocess.cpp",
    "//base/update/updater/services/updater_utils.cpp",
    "updater_service_unittest.cpp",
  ]
  include_dirs = [
    "include",
    "${SUBSYSTEM_DIR}/utils/include",
    "${SUBSYSTEM_DIR}/interfaces/kits/include/",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/services/package/pkg_verify",
    "//base/update/updater/services/include/log",
    "//base/update/updater/utils/json",
    "//foundation/graphic/ui/frameworks",
    "//foundation/graphic/ui/interfaces/kits",
    "//foundation/graphic/ui/interfaces/innerkits",
    "//foundation/graphic/utils/interfaces/kits",
    "//foundation/graphic/utils/interfaces/innerkits",
    "//third_party/bounds_checking_function/include",
    "//base/update/updater/services",
    "//base/update/updater/services/ui",
    "//base/update/updater/services/include",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara/include",
    "//base/update/updater/services/ui/view",
  ]

  deps = [
    "//base/update/updater/interfaces/kits/misc_info:libmiscinfo",
    "//base/update/updater/interfaces/kits/packages:libpackageExt",
    "//base/update/updater/services/applypatch:libapplypatch",
    "//base/update/updater/services/diffpatch/patch:libpatch",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/services/package:libupdaterpackage",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/cJSON:cjson",
    "//third_party/libdrm:libdrm",
    "//third_party/openssl:libcrypto_static",
    "//third_party/openssl:ssl_source",
    "//third_party/zlib:libz",
    "//base/startup/init/interfaces/innerkits/syspara:begetutil_ph",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]
  configs = [ "$UPDATER_TEST_ROOT:utest_config" ]
  install_enable = true
  part_name = "updater"
}
